# python-platzi-news

./: .pre-commit-config.yaml  pyproject.toml
mypy-report/: index.html
mypy-report/html/src/platzi_news/: config.py.html
mypy-report/html/src/platzi_news/analysis/: analyzer.py.html
mypy-report/html/src/platzi_news/core/: services.py.html
mypy-report/html/src/platzi_news/io/: cli.py.html
mypy-report/html/src/platzi_news/sources/: newsapi.py.html
src/platzi_news/: config.py  main.py
src/platzi_news/analysis/: __init__.py  analyzer.py
src/platzi_news/core/: __init__.py  exceptions.py  models.py  services.py
src/platzi_news/io/: __init__.py  cli.py  display.py
src/platzi_news/sources/: __init__.py  guardian.py  newsapi.py
tests/: test_analyzer.py  test_config.py  test_display.py  test_exceptions.py  test_models.py  test_news_sources.py
