[project]
name = "platzi-news"
version = "0.1.0"
description = "CLI app to search news from Guardian and NewsAPI, and analyze with OpenAI"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Luis Martinez", email = "lcmartinezl05@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
]

[project.scripts]
platzi-news = "platzi_news.main:main"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
]

