[project]
name = "platzi-news"
version = "0.1.0"
description = "CLI app to search news from Guardian and NewsAPI, and analyze with OpenAI"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Luis Martinez", email = "lcmartinezl05@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sentry-sdk>=2.58.0",
    "httpx>=0.28.1",
]

[project.scripts]
platzi-news = "platzi_news.main:main"

[dependency-groups]
dev = [
    "lxml>=6.1.0",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
